fex(back-end): be standardize error situations (#27)
* fix(back-end): fix prisma issue

* refactor(back-end): standardize errors on each users route

* refactor(back-end): standardize errors on each records route

* fix(back-end): roll back to the prisma initial setting

* chore(back-end): try to make the condition on checking if theRecord is existing more readable, but failed
