# back-end/controllers/record-controller.js
@@ -6,17 +6,40 @@ const recordController = {
   // Create a new record
   // URL: post /records
   postReocrd: async (req, res, next) => {
+    const { title, amount, note, categoryId } = req.body
+    const userId = req.user.id
+
+    // Check if there are title, amount and categoryId in req.body
+    if (!title || !amount || !categoryId) {
+      return res.status(400).json({
+        type: 'Post record failed',
+        title: 'Require reocrd title, amount or categoryId',
+        field_errors: {
+          title: 'required',
+          amount: 'required',
+          categoryId: 'required',
+        },
+      })
+    }
+
+    // Check data type of the email and password
+    if (
+      typeof title !== 'string' ||
+      typeof amount !== 'number' ||
+      typeof categoryId !== 'number'
+    ) {
+      return res.status(400).json({
+        type: 'Post record failed',
+        title: 'Incorrect data type',
+        field_errors: {
+          title: 'string',
+          amount: 'number',
+          categoryId: 'number',
+        },
+      })
+    }
+
     try {
-      const { title, amount, note, categoryId } = req.body
-      const userId = req.user.id
-
-      if (!title || !amount || !categoryId)
-        return res
-          .status(400)
-          .json(
-            'missing title or amount or category id to create a new expense record'
-          )
-
       await prisma.record.create({
         data: {
           title,
@@ -36,38 +59,91 @@ const recordController = {
   // Edit the record
   // URL: put /records/:rid
   putRecord: async (req, res, next) => {
+    const recordId = Number(req.params.rid)
+    const { title, amount, note, categoryId } = req.body
+    const userId = req.user.id
+
+    // Check if there is record id in req.params
+    if (!recordId) {
+      return res.status(400).json({
+        type: 'Put record failed',
+        title: 'Require reocrd id',
+        field_errors: {
+          recordId: 'required',
+        },
+      })
+    }
+
+    // Check if there are title, amount and categoryId in req.body
+    if (!title || !amount || !categoryId) {
+      return res.status(400).json({
+        type: 'Put record failed',
+        title: 'Require reocrd title, amount or categoryId',
+        field_errors: {
+          title: 'required',
+          amount: 'required',
+          categoryId: 'required',
+        },
+      })
+    }
+
+    // Check data type
+    if (
+      typeof recordId !== 'number' ||
+      typeof title !== 'string' ||
+      typeof amount !== 'number' ||
+      typeof categoryId !== 'number'
+    ) {
+      return res.status(400).json({
+        type: 'Put record failed',
+        title: 'Incorrect data type',
+        field_errors: {
+          recordId: 'number',
+          title: 'string',
+          amount: 'number',
+          categoryId: 'number',
+        },
+      })
+    }
+
     try {
-      const recordId = Number(req.params.rid)
-      const { title, amount, note, categoryId } = req.body
-      const userId = req.user.id
-
-      // Check if there are missing data
-      if (!title || !amount || !categoryId)
-        return res
-          .status(400)
-          .json('missing title or amount or category id to update this record')
-
       // Check if the record is in database
       const theRecord = await prisma.record.findUnique({
         where: {
           id: recordId,
         },
       })
-      if (!theRecord) return res.status(400).json('the record does not exist')
+
+      // theRecord should be {}, but somehow it's null
+      // if (Object.keys(theRecord).length === 0)
+      if (!theRecord) {
+        return res.status(400).json({
+          type: 'Put record failed',
+          title: 'Record not exist',
+          field_errors: {
+            record: 'not exist',
+          },
+        })
+      }
 
       // Check if the record is one of the current user's records
-      if (userId !== theRecord.userId)
-        return res
-          .status(400)
-          .json('this record does not belong to the current user')
+      if (userId !== theRecord.userId) {
+        return res.status(400).json({
+          type: 'Put record failed',
+          title: 'Invalid user',
+          field_errors: {
+            userId: 'not theRecord.userId',
+          },
+        })
+      }
 
       // Update this record
       await prisma.record.update({
         where: { id: recordId },
-        data: { title, amount, note, categoryId },
+        data: { title, amount, note, categoryId, userId },
       })
 
-      return res.status(204)
+      return res.status(204).end()
     } catch (error) {
       next(error)
     }
@@ -76,23 +152,60 @@ const recordController = {
   // Delete the record
   // URL: delete /records/:rid
   deleteRecord: async (req, res, next) => {
-    try {
-      const recordId = Number(req.params.rid)
-      const userId = req.user.id
+    const recordId = Number(req.params.rid)
+    const userId = req.user.id
 
+    // Check if there is record id in req.params
+    if (!recordId) {
+      return res.status(400).json({
+        type: 'Delete record failed',
+        title: 'Require reocrd id',
+        field_errors: {
+          recordId: 'required',
+        },
+      })
+    }
+
+    // Check data type
+    if (typeof recordId !== 'number') {
+      return res.status(400).json({
+        type: 'Delete record failed',
+        title: 'Incorrect data type',
+        field_errors: {
+          recordId: 'number',
+        },
+      })
+    }
+    try {
       // Check if the record is in database
       const theRecord = await prisma.record.findUnique({
         where: {
           id: recordId,
         },
       })
-      if (!theRecord) return res.status(400).json('the record does not exist')
+
+      // theRecord should be {}, but somehow it's null
+      // if (Object.keys(theRecord).length === 0)
+      if (!theRecord) {
+        return res.status(400).json({
+          type: 'Delete record failed',
+          title: 'Record not exist',
+          field_errors: {
+            record: 'not exist',
+          },
+        })
+      }
 
       // Check if the record is one of the current user's records
-      if (userId !== theRecord.userId)
-        return res
-          .status(400)
-          .json('this record does not belong to the current user')
+      if (userId !== theRecord.userId) {
+        return res.status(400).json({
+          type: 'Delete record failed',
+          title: 'Invalid user',
+          field_errors: {
+            userId: 'not theRecord.userId',
+          },
+        })
+      }
 
       // Delete this record
       await prisma.record.delete({
@@ -101,7 +214,7 @@ const recordController = {
         },
       })
 
-      return res.status(204)
+      return res.status(204).end()
     } catch (error) {
       next(error)
     }
@@ -110,9 +223,8 @@ const recordController = {
   // Get all expense records and accept query string
   // URL: get /records/expense
   getExpenseRecords: async (req, res, next) => {
+    const userId = req.user.id
     try {
-      const userId = req.user.id
-
       // Get all expense category ids
       const result =
         await prisma.$queryRaw`SELECT id FROM "Category" WHERE NOT "mainCategory" = 'Income' AND NOT "mainCategory" = 'Savings';`
@@ -143,9 +255,8 @@ const recordController = {
   // Get all income records and accept query string
   // URL: get /records/income
   getIncomeReocrds: async (req, res, next) => {
+    const userId = req.user.id
     try {
-      const userId = req.user.id
-
       // Get all income category ids
       const result =
         await prisma.$queryRaw`SELECT id FROM "Category" WHERE "mainCategory" = 'Income';`
@@ -176,9 +287,8 @@ const recordController = {
   // Get all saving records and accept query string
   // URL: get /records/saving
   getSavingRecords: async (req, res, next) => {
+    const userId = req.user.id
     try {
-      const userId = req.user.id
-
       // Get all saving category ids
       const result =
         await prisma.$queryRaw`SELECT id FROM "Category" WHERE "mainCategory" = 'Savings';`
